--- a/forecast_lab.ipynb
+++ b/forecast_lab.ipynb
@@ -18,6 +18,11 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.6.13"
+    },
+    "colab": {
+      "name": "forecast-lab.ipynb",
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "cells": [
